--- a/final-framework-testng/test-output/old/Default suite/methods.html
+++ b/final-framework-testng/test-output/old/Default suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62aa67">  <td>19/06/19 18:35:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ThirdTestcase.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.ThirdTestcase@5e3a8624]">&gt;&gt;setUpBeforeClass</td> 
+<tr bgcolor="62aa67">  <td>19/06/25 16:48:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RETC_032.setUpBeforeClass()[pri:0, instance:com.training.sanity.tests.RETC_032@5e3a8624]">&gt;&gt;setUpBeforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>19/06/19 18:35:40</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ThirdTestcase.setUp()[pri:0, instance:com.training.sanity.tests.ThirdTestcase@5e3a8624]">&gt;&gt;setUp</td> 
+<tr bgcolor="62aa67">  <td>19/06/25 16:48:10</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RETC_032.setUp()[pri:0, instance:com.training.sanity.tests.RETC_032@5e3a8624]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>19/06/19 18:35:52</td>   <td>12262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThirdTestcase.validLoginTest()[pri:0, instance:com.training.sanity.tests.ThirdTestcase@5e3a8624]">validLoginTest</td> 
+<tr bgcolor="62aa67">  <td>19/06/25 16:48:20</td>   <td>10342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RETC_032.validLoginTest()[pri:0, instance:com.training.sanity.tests.RETC_032@5e3a8624]">validLoginTest</td> 
   <td>main@1847509784</td>   <td></td> </tr>
-<tr bgcolor="62aa67">  <td>19/06/19 18:36:03</td>   <td>22627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ThirdTestcase.tearDown()[pri:0, instance:com.training.sanity.tests.ThirdTestcase@5e3a8624]">&lt;&lt;tearDown</td> 
+<tr bgcolor="62aa67">  <td>19/06/25 16:49:11</td>   <td>61124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RETC_032.tearDown()[pri:0, instance:com.training.sanity.tests.RETC_032@5e3a8624]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
 </table>
